crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@hash_minimal.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
hash:
- CANONICAL_BYTES_LEN 338
- CANONICAL_BYTES_HEX_PREVIEW 7b22636f6e74656e745f68617368223a22626c616b65333a30303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030222c227061636b5f6e616d65223a22736e6170222c227061636b5f76657273696f6e223a22312e30
- CONTENT_HASH "blake3:8e4fcca9cf5990c58ed3b84343fd21b21b83d0e6f4e25d3e0f72a74c75c74f65"
