crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@hash_multi_procedure.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
hash:
- CANONICAL_BYTES_LEN 716
- CANONICAL_BYTES_HEX_PREVIEW 7b22636f6e74656e745f68617368223a22626c616b65333a30303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030222c227061636b5f6e616d65223a226d756c7469222c227061636b5f76657273696f6e223a22322e
- CONTENT_HASH "blake3:863990951b630caced34985941761f2fe7c873fe96f7a49923322133f4fcd057"
