crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@hash_schema_shape.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
hash:
- CANONICAL_BYTES_LEN 392
- CANONICAL_BYTES_HEX_PREVIEW 7b22636f6e74656e745f68617368223a22626c616b65333a30303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030222c227061636b5f6e616d65223a22617272617973222c227061636b5f76657273696f6e223a2233
- CONTENT_HASH "blake3:ed47bb5ca3d0b547bc1e022ab6e85bd8bb84a9cf0ee916023389070744aab359"
