crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@history_empty_wal.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
history:
- <empty>
