crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@history_full_lifecycle.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
history:
- [0] kind="validation_failed" pack_name="bad_pack" content_hash=NULL principal="history.principal" reason=NULL error="manifest failed" at=1970-01-01T00:00:01Z
- [1] kind="staged" pack_name="full_pack" content_hash="blake3:0202020202020202020202020202020202020202020202020202020202020202" principal="history.principal" reason=NULL error=NULL at=1970-01-01T00:00:02Z
- [2] kind="activated" pack_name="full_pack" content_hash="blake3:0202020202020202020202020202020202020202020202020202020202020202" principal="history.principal" reason=NULL error=NULL at=1970-01-01T00:00:03Z
- [3] kind="deprecated" pack_name="full_pack" content_hash=NULL principal="history.principal" reason="old" error=NULL at=1970-01-01T00:00:04Z
- [4] kind="disabled" pack_name="full_pack" content_hash=NULL principal="history.principal" reason=NULL error=NULL at=1970-01-01T00:00:05Z
