crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@history_single_staged.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
history:
- [0] kind="staged" pack_name="history_pack" content_hash="blake3:0101010101010101010101010101010101010101010101010101010101010101" principal="history.principal" reason=NULL error=NULL at=1970-01-01T00:00:01Z
