crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@lifecycle_full.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
events:
- [0] kind=staged pack_name="snap" content_hash="blake3:8e4fcca9cf5990c58ed3b84343fd21b21b83d0e6f4e25d3e0f72a74c75c74f65" principal="snapshot.principal" at=1970-01-01T00:00:02Z
- [1] kind=activated pack_name="snap" content_hash="blake3:8e4fcca9cf5990c58ed3b84343fd21b21b83d0e6f4e25d3e0f72a74c75c74f65" principal="snapshot.principal" at=1970-01-01T00:00:03Z
- [2] kind=deprecated pack_name="snap" reason="snapshot.reason" principal="snapshot.principal" at=1970-01-01T00:00:04Z
- [3] kind=disabled pack_name="snap" principal="snapshot.principal" at=1970-01-01T00:00:05Z

registry:
- <empty>

error:
- <empty>
