crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@lifecycle_sink_refused.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
events:
- <empty>

registry:
- <empty>

error:
- variant=SinkRefused gate=none detail="test refuses staging"
