crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@lifecycle_validation_failed.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
events:
- [0] kind=validation_failed pack_name=NULL principal="snapshot.bad" error="manifest is not valid JSON: EOF while parsing an object at line 1 column 1" at=1970-01-01T00:00:01Z

registry:
- <empty>

error:
- variant=Manifest gate=manifest_syntax_and_schema manifest_variant=InvalidJson
