crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@manifest_bad_capability.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
manifest:
- ERR variant=ProcedureCapabilityMalformed gate=procedure_capability_format name="demo.cap" capability="bad cap!"
